Implement asset ledger timeline and dashboard projections